Completed main game functionality

--- a/index.html
+++ b/index.html
@@ -3,12 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>RPS Game</title>
+    <script src="main.js" defer></script>
 </head>
 <body>
+<div class="header">
+    <h1>RPS GAME</h1>
+</div>
+
+<div id="results-box">
+    <h2>The result is...</h2>
+    <h3 id="result">Awaiting the game...</h3>
+</div>
+<div id="choice-buttons">
     <button id="rock">ROCK</button>
     <button id="paper">PAPER</button>
     <button id="scissors">SCISSORS</button>
+</div>
 
-    <script src="main.js"></script>
 </body>
 </html>
